# refoliate

./: .gitignore  .gitmodules  Cargo.toml  README.md  default.nix  flake.nix  package.nix  shell.nix
.cargo/: config.toml
.github/workflows/: aerie-build.yml  aerie-check.yml  gh-pages.yml
.moon/: workspace.yml
aerie/: Cargo.toml  default.nix  shell.nix
aerie/docs/: book.toml
aerie/docs/src/: .markdownlint-cli2.yaml  SUMMARY.md  agents.md  dev_start.md  headless.md  interface.md  introduction.md  rationale.md  roadmap.md  sessions.md  subgraphs.md  tools.md  user_start.md  workflows.md
aerie/docs/src/nodes/: agent.md  control.md  general.md  history.md  json.md  scripting.md  tools.md  value.md
aerie/examples/hello-node/: Cargo.toml  README.md
aerie/examples/hello-node/src/: main.rs
aerie/examples/tools/nix/: fetch-url.mcp  leaderboard.mcp  mcp-git.mcp  movies-api.mcp  open-meteo.mcp  openlibrary-oas.mcp  pet-store-api.mcp  qdrant-local.mcp  rate-limiter.mcp  reranker.mcp  server-memory.mcp  tavily.mcp
aerie/examples/workflows/: book-board.yml  cine-bot.yml  fiction-router.yml  rag-qdrant.yml  schema-gen.yml
aerie/src/: agent.rs  app.rs  chat.rs  config.rs  lib.rs  logging.rs  main.rs  pipeline.rs  storage.rs  toolbox.rs  transmute.rs  utils.rs
aerie/src/ui/: behavior.rs  mod.rs  runner.rs  shortcuts.rs  state.rs  workflow.rs
aerie/src/ui/tiles/: chat.rs  logview.rs  messages.rs  mod.rs  navigator.rs  outputs.rs  pipeline.rs  settings.rs  subgraph.rs  toolset.rs  workflow.rs
aerie/src/utils/: image.rs
aerie/src/workflow/: mod.rs  runner.rs  store.rs
aerie/src/workflow/nodes/: agent.rs  chat.rs  default_subgraph.yml  history.rs  json.rs  misc.rs  mod.rs  primatives.rs  scaffold.rs  scripting.rs  subgraph.rs  tools.rs
aerie/tutorial/workflows/: __default__.yml  basic.yml  chatty.yml  dialog.yml  drivechain.yml  errors.yml  haikus.yml  matcha.yml  par-test.yml  rag-index.yml  rag-output.yml  rag-qdrant.yml  ragged.yml  structured.yml  table-tennis-sg.yml  table-tennis.yml  toolhead.yml
embasee/: Cargo.toml  default.nix  shell.nix
embasee/examples/: anchors.txt  tsnetty.rs
embasee/src/: lib.rs  main.rs
embcp-server/: Cargo.toml  default.nix
embcp-server/src/: config.rs  main.rs
emberlain/: Cargo.toml  moon.yml
emberlain/etc/: languages.yml
emberlain/examples/: explainer.rs  toolhead.rs  treewalker.rs  trident.rs
emberlain/sample_data/: foo.js
emberlain/src/: config.rs  lib.rs  main.rs  parse.rs  snippet.rs  template.rs  traverse.rs
emberlain/src/workers/: dedup.rs  embed.rs  extract.rs  mod.rs  pathfinder.rs  progress.rs  prune.rs  summarize.rs  synthesize.rs
emberlain/tests/: query_rust.rs
emberlain/tests/utils/: mod.rs
hatchery/: Cargo.toml  README.md  package-lock.json  package.json  shell.nix  tailwind.config.js
hatchery/src/: app.rs  lib.rs  main.rs
hatchery/src/components/: markdown.rs  mermaid.rs  mod.rs
hatchery/src/pages/: home.rs
nix/: sources.json
nursery/: Cargo.toml  README.md  package-lock.json  shell.nix
nursery/src/: app.rs  fileserv.rs  lib.rs  main.rs  mermaid.rs
nursery/src/components/: mermaid.rs
