[workspace]
members = ["embcp-server", "emberlain"]
exclude = ["embasee", "upstream"]
resolver = "3"

[workspace.dependencies]
fastembed = "5.5"
schemars = "1.0.4"

[workspace.dependencies.qdrant-client]
version = "1.15.0"
features = []

[workspace.dependencies.rig-core]
version = "0.24.0"
features = ["derive"]

[patch.crates-io]
qdrant-client = { git = "https://github.com/patonw/qdrant-client", branch = "testgen-v1.15.0" }
