[patch.crates-io.qdrant-client]
path = "upstream/qdrant-client"

[workspace]
resolver = "3"
members = ["emberlain", "embasee", "embcp-server"]
exclude = ["upstream"]

[workspace.dependencies]
fastembed = "5.5"
schemars = "1.0.4"

[workspace.dependencies.qdrant-client]
version = "1.15.0"
features = []

[workspace.dependencies.rig-core]
version = "0.24.0"
features = ["derive"]
