[package]
name = "aerie"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
# rig-core = { path = "../../../upstream/rust/rig/rig-core" }
rig-core = { git = "https://github.com/patonw/rig", branch = "fix-tool_choice" }

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["env", "derive"] }
dirs = "6.0.0"
eframe = "0.32.3"
egui = "0.32.3"
egui_commonmark = "0.21.1"
egui_extras = "0.32.3"
env_logger = "0.11.8"
flume = { version = "0.11.1", features = ["async"] }
image = { version = "0.25.8", features = ["png"] }
log = "0.4.28"
rig-core = { workspace = true, features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
serde_yml = "0.0.12"
tokio = { version = "1.47.1", features = ["full"] }
