[package]
name = "aerie"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
# rig-core = { path = "../../../upstream/rust/rig/rig-core" }
rig-core = { git = "https://github.com/patonw/rig", branch = "fix-tool_choice" }

[dependencies]
anyhow = "1.0.100"
cached = "0.56.0"
clap = { version = "4.5.48", features = ["env", "derive"] }
dirs = "6.0.0"
eframe = "0.32.3"
egui = "0.32.3"
egui-phosphor = "0.10.0"
egui_commonmark = "0.21.1"
egui_extras = { version = "0.32.3", features = ["syntect"] }
egui_tiles = "0.13.0"
env_logger = "0.11.8"
flume = { version = "0.11.1", features = ["async"] }
glob = "0.3.3"
image = { version = "0.25.8", features = ["png"] }
itertools = "0.14.0"
log = "0.4.28"
minijinja = { version = "2.11.0", features = ["loader"] }
rig-core = { workspace = true, features = ["derive", "rmcp"] }
rmcp = { version = "0.5.0", features = [
  "client",
  "server",
  "transport-child-process",
  "transport-io",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
serde_yml = "0.0.12"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "json",
  "registry",
] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
