[package]
name = "aerie"
version = "0.1.0"
edition = "2024"
default-run = "aerie"

[patch.crates-io]
# rig-core = { path = "../../../upstream/rust/rig/rig-core" }
rig-core = { git = "https://github.com/patonw/rig", branch = "fix-tool_choice" }

[dependencies]
anyhow = "1.0.100"
arc-swap = { version = "1.7.1", features = ["serde"] }
base64 = "0.22.1"
cached = "0.56.0"
clap = { version = "4.5.48", features = ["env", "derive"] }
decorum = "0.4.0"
delegate = "0.13.5"
dirs = "6.0.0"
eframe = "0.33.2"
egui = "0.33.2"
egui-phosphor = "0.11.0"
egui-snarl = { version = "0.9.0", features = ["serde"] }
egui_commonmark = "0.22.0"
egui_extras = { version = "0.33.2", features = ["http", "image", "syntect"] }
egui_tiles = "0.14.0"
egui_graphs = "0.29.0"
env_logger = "0.11.8"
flume = { version = "0.11.1", features = ["async"] }
glob = "0.3.3"
im = { version = "15.1.0", features = ["serde", "debug"] }
image = { version = "0.25.8", features = ["png"] }
itertools = "0.14.0"
kinded = "0.4.0"
log = "0.4.28"
minijinja = { version = "2.11.0", features = ["loader", "json"] }
petgraph = { version = "0.8", default-features = false, features = [
  "stable_graph",
] }
regex = "1.12.2"
rig-core = { version = "0.24.0", features = ["derive", "rmcp"] }
rmcp = { version = "0.8.5", features = [
  "client",
  "server",
  "reqwest",                                  # required for some strange reason
  "transport-child-process",
  "transport-io",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
] }
rpds = { version = "1.2.0", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
serde_yml = "0.0.12"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "fmt",
  "json",
  "registry",
] }
typed-builder = "0.23.1"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
colorous = "1.0.16"
derive_builder = "0.20.2"
jaq-core = "2.2.1"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-std = "2.1.2"
jsonschema = "0.37.4"
rfd = { version = "0.16.0", default-features = false, features = [
  "tokio",
  "xdg-portal",
] }
chrono = "0.4.42"
