[package]
name = "embasee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
egui_plot = "0.34.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "sync"] }
tonic = "0.14.2"
rand = "0.9.1"
itertools = "0.14.0"
ndarray = "0.17"
pyo3 = { version = "0.26", features = ["auto-initialize"] }
polars = { version = "0.52", features = [
  "dtype-array",
  "dtype-struct",
  "lazy",
  "ndarray",
  "regex",
  "timezones",    # https://github.com/pola-rs/polars/issues/25231
] }
pyo3-polars = "0.25"
colorous = "1.0.16"
fastembed = "^5.5"
cached = { version = "0.56", features = ["async"] }
qdrant-client = "1.15.0"
dirs = "6.0.0"


[patch.crates-io]
qdrant-client = { git = "https://github.com/patonw/qdrant-client", branch = "testgen-v1.15.0" }
