[package]
name = "embasee"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
egui_extras = "0.32.0"
egui_plot = "0.32.0"
env_logger = "0.11.8"
log = "0.4.27"
# qdrant-client = { workspace = true, default-features = false }
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "sync"] }
tonic = "0.13.1"
rand = "0.9.1"
linfa-tsne = "0.7.1"
linfa = "0.7.1"
linfa-reduction = "0.7.1"
linfa-datasets = { version = "0.7.1", features = ["iris"] }
eframe = "0.31.1"
egui = "0.31.1"
itertools = "0.14.0"
ndarray = "0.15"
pyo3 = { version = "0.25.1", features = ["auto-initialize"] }
polars = { version = "0.49.1", features = [
  "dtype-array",
  "dtype-struct",
  "lazy",
  "ndarray",
  "regex",
] }
pyo3-polars = "0.22.0"
colorous = "1.0.16"
fastembed.workspace = true
cached = { version = "0.55.1", features = ["async"] }
qdrant-client.workspace = true
dirs = "6.0.0"
