[package]
name = "embcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["env", "derive"] }
dirs = "6.0.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
fastembed = "^4.9"
figment = { version = "0.10.19", features = ["env", "toml"] }
itertools = "0.14.0"
qdrant-client.workspace = true
rmcp = { version = "0.6.0", features = ["server", "transport-io"] }
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_with = "3.14.0"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.5"
typed-builder = "0.21.2"
