[package]
name = "emberlain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
blake3 = "1.8.2"
cached = "0.56.0"
cached-path = "0.8.1"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["env", "derive", "wrap_help"] }
dirs = "6.0.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
env_logger = "0.11.8"
fastembed = "4.9.1"
figment = { version = "0.10.19", features = ["env", "toml"] }
flume = { version = "0.11.1", features = ["async"] }
git2 = "0.20.2"
hex = "0.4.3"
humantime = "2.2.0"
ignore = "0.4.23"
indicatif = "0.18.0"
indicatif-log-bridge = "0.2.3"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
qdrant-client.workspace = true
reqwest = { version = "0.12.22", features = ["json"] }
rig-core = { version = "0.15.1", features = ["derive"] }
rig-fastembed = "0.2.1"
rig-qdrant = "0.1.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.14.0", features = ["hex"] }
serde_yml = "0.0.12"
textwrap = "0.16.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
toml = "0.9.4"
tonic = "0.13.1"
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "ansi",
  "fmt",
  "smallvec",
  "std",
  "env-filter",
  "json",
] }
tree-sitter = { version = "0.25.6", features = ["wasm"] }
typed-builder = "0.21.0"
uuid = { version = "1.17.0", features = ["v8"] }

[dev-dependencies]
googletest = "0.14.2"
