[package]
name = "emberlain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
cached-path = "0.8.1"
clap = { version = "4.5.40", features = ["env", "derive"] }
ignore = "0.4.23"
itertools = "0.14.0"
qdrant-client = "1.14.0"
rig-core = { version = "0.14.0", features = ["derive"] }
rig-fastembed = "0.2.1"
rig-qdrant = "0.1.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread"] }
tonic = "0.13.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree-sitter = { version = "0.25.6", features = ["wasm"] }
